--- a/copyright-text/package.json
+++ b/copyright-text/package.json
@@ -7,14 +7,14 @@
     "type": "module",
     "main": "index.js",
     "scripts": {
-        "build": "wp-scripts build",
+        "build": "wp-scripts build --blocks-manifest",
         "format": "wp-scripts format",
         "format:src": "wp-scripts format ./src",
         "lint:css": "wp-scripts lint-style",
         "lint:js": "wp-scripts lint-js",
         "packages-update": "wp-scripts packages-update",
         "plugin-zip": "wp-scripts plugin-zip",
-        "start": "wp-scripts start",
+        "start": "wp-scripts start --blocks-manifest",
         "build:with-format": "npm run format:src && npm run build"
     },
     "dependencies": {
