--- a/footer/package.json
+++ b/footer/package.json
@@ -7,18 +7,19 @@
     "type": "module",
     "main": "index.js",
     "scripts": {
-        "build": "wp-scripts build",
+        "build": "wp-scripts build --blocks-manifest",
+        "build:manifest": "",
         "format": "wp-scripts format",
         "format:src": "wp-scripts format ./src",
         "lint:css": "wp-scripts lint-style",
         "lint:js": "wp-scripts lint-js",
         "packages-update": "wp-scripts packages-update",
         "plugin-zip": "wp-scripts plugin-zip",
-        "start": "wp-scripts start",
+        "start": "wp-scripts start --blocks-manifest",
         "build:with-format": "npm run format:src && npm run build"
     },
     "dependencies": {
-        "@wordpress/icons": "^10.16.0",
-        "@wordpress/scripts": "^30.9.0"
+        "@wordpress/icons": "^10.24.0",
+        "@wordpress/scripts": "^30.17.0"
     }
 }
